# password_manager

./: Cargo.toml  password_manager.db3
src/: database.rs  database_integration.rs  main.rs  rest_api.rs
