[package]
name = "password_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spectrum = {path = "../spectrum"}
rusqlite = { version = "0.28.0", features = ["bundled"] }
rpassword = "7.1.0"
actix-web = "4.2.1"
actix-cors = "0.6.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"
